Server: Add support for the WebSocket protocol
Implements #127

--- a/unix/Xvnc/programs/Xserver/hw/vnc/CMakeLists.txt
+++ b/unix/Xvnc/programs/Xserver/hw/vnc/CMakeLists.txt
@@ -31,13 +31,14 @@ if(APPLE OR CMAKE_SYSTEM_NAME MATCHES "(OpenBSD|FreeBSD|NetBSD|DragonFly)")
 		" -I${ICONV_INCLUDE_DIR}")
 endif()
 
+set(RFBSSLSRC_COMMON base64.c websockets.c ws_decode.c)
 if(TVNC_USETLS STREQUAL "openssl")
 	include(FindOpenSSL)
 	if(NOT OPENSSL_FOUND)
 		message(STATUS "OpenSSL not found.  Disabling TLS encryption")
 		set(TVNC_USETLS "None" CACHE STRING ${TVNC_USETLS_DESC} FORCE)
 	else()
-		set(RFBSSLSRC rfbssl_openssl.c)
+		set(RFBSSLSRC rfbssl_openssl.c ${RFBSSLSRC_COMMON})
 		message(STATUS "Enabling TLS encryption using OpenSSL")
 		add_definitions(-DUSETLS)
 		set_property(SOURCE ${RFBSSLSRC} APPEND_STRING PROPERTY COMPILE_FLAGS
@@ -55,7 +56,7 @@ elseif(TVNC_USETLS STREQUAL "gnutls")
 		message(STATUS "GnuTLS not found.  Disabling TLS encryption")
 		set(TVNC_USETLS "None" CACHE STRING ${TVNC_USETLS_DESC} FORCE)
 	else()
-		set(RFBSSLSRC rfbssl_gnutls.c)
+		set(RFBSSLSRC rfbssl_gnutls.c ${RFBSSLSRC_COMMON})
 		message(STATUS "Enabling TLS encryption using GnuTLS")
 		add_definitions(-DUSETLS ${GNUTLS_DEFINITIONS})
 		set_property(SOURCE ${RFBSSLSRC} APPEND_STRING PROPERTY COMPILE_FLAGS
